--- a/.gitignore
+++ b/.gitignore
@@ -70,10 +70,10 @@ typings/
 /coverage
 
 # production
-src/*
-public/*
-build/static/css/*.map
-build/static/js/*.map
+# src/*
+# public/*
+# build/static/css/*.map
+# build/static/js/*.map
 
 # misc
 .DS_Store
